--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Portfolio</title>
     <!-- External Stylesheet -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <!-- Google-fonts -->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
@@ -82,9 +82,9 @@
           <p style="font-size: 1.5rem; font-family: cursive;margin-top: 0;">'Create, Design, Build.'</p>
         </div>
         <div class="about-anime" >
-          <img src="images/vector-2.jpg" style="margin-bottom: 40%;" width="200px" height="200px" alt="">
-          <a href="https://github.com/7432surya"><img src="icons/github.png" style="position: absolute; top: 250px; left: 50px;" width="50px" height="50px" alt=""></a>
-          <a href="https://www.instagram.com/create.design.build/"> <img src="icons/instagram.webp" style="position: absolute; top: 250px; left: 125px;" width="50px" height="50px" alt=""> </a>
+          <img src="vector-2.jpg" style="margin-bottom: 40%;" width="200px" height="200px" alt="">
+          <a href="https://github.com/7432surya"><img src="github.png" style="position: absolute; top: 250px; left: 50px;" width="50px" height="50px" alt=""></a>
+          <a href="https://www.instagram.com/create.design.build/"> <img src="instagram.webp" style="position: absolute; top: 250px; left: 125px;" width="50px" height="50px" alt=""> </a>
         </div>
       </div>
         <div class="skills">
@@ -416,7 +416,7 @@
           <h1 style="padding-top: 50px;">Services</h1>
           <div class="service-provided">
             <div class="service logo">
-              <img src="images/logo-design-Surya.png" width="100%" height="150px;">
+              <img src="logo-design-Surya.png" width="100%" height="150px;">
               <div class="description">
                 <h1>Logo Designing</h1>
                 <p>Modern logo with customization</p>
@@ -424,7 +424,7 @@
               </div>
             </div>
             <div class="service web">
-              <img src="images/web-design-surya.jpg" width="100%" height="150px;">
+              <img src="web-design-surya.jpg" width="100%" height="150px;">
               <div class="description">
                 <h1>Frontend Website</h1>
                 <p>Modern frontend website with perfect UI</p>
@@ -432,7 +432,7 @@
               </div>
             </div>
             <div class="service vector">
-              <img src="images/vector-design-surya.jpg" width="100%" height="150px;">
+              <img src="vector-design-surya.jpg" width="100%" height="150px;">
               <div class="description">
                 <h1>Vector Design</h1>
                 <p>Vector Art for websites and other use</p>
@@ -440,7 +440,7 @@
               </div>
             </div>
             <div class="service mock-up">
-              <img src="images/Mock-up-Surya.jpg" width="100%" height="150px;">
+              <img src="Mock-up-Surya.jpg" width="100%" height="150px;">
               <div class="description">
                 <h1>Mock-ups</h1>
                 <p>Mock-ups for T-shirt, Bottle, Mug, Card, etc,.</p>
@@ -448,7 +448,7 @@
               </div>
             </div>
             <div class="service illustration">
-              <img src="images/illustration-surya.jpg" width="100%" height="150px;">
+              <img src="illustration-surya.jpg" width="100%" height="150px;">
             <div class="description">
               <h1>Illustrations</h1>
               <p>Illustration Art for websites, profile, etc,. Photo illustration is also available</p>
@@ -456,7 +456,7 @@
             </div>
             </div>
             <div class="service coming-soon">
-              <img src="images/coming-soon-surya.jpg" width="100%" height="150px;">
+              <img src="coming-soon-surya.jpg" width="100%" height="150px;">
             <div class="description">
               <h1>Coming Soon!</h1>
               <a href="#contact"><button type="button" href="#contact" name="button">Notify</button></a>
@@ -470,8 +470,8 @@
         <strong>Surya S K</strong>
 
         <h3><strong>E-mail:</strong> suryakrishnan2002@gmail.com</h3>
-        <a href="https://github.com/7432surya"><img src="icons/github.png" style="margin-top: 3rem;" width="50px" height="50px" alt=""></a>
-        <a href="https://www.instagram.com/create.design.build/"> <img src="icons/instagram.webp" style="margin-top: 3rem;" width="50px" height="50px" alt=""> </a>
+        <a href="https://github.com/7432surya"><img src="github.png" style="margin-top: 3rem;" width="50px" height="50px" alt=""></a>
+        <a href="https://www.instagram.com/create.design.build/"> <img src="instagram.webp" style="margin-top: 3rem;" width="50px" height="50px" alt=""> </a>
       </div>
 
 
